<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/x_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/value_x"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/x_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/x_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/zero_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/x_label"
        app:layout_constraintTop_toTopOf="@id/x_label" />

    <TextView
        android:id="@+id/y_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/value_y"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/y_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/x_value" />

    <TextView
        android:id="@+id/y_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/zero_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/y_label"
        app:layout_constraintTop_toTopOf="@id/y_label" />

    <TextView
        android:id="@+id/z_label"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/value_z"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/z_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/y_value" />

    <TextView
        android:id="@+id/z_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/zero_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/z_label"
        app:layout_constraintTop_toTopOf="@id/z_label" />

    <EditText
        android:id="@+id/user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_input"
        android:hint="@string/username_input"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/z_label" />

    <TextView
        android:id="@+id/letter_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/letters_counter"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/z_label"
        app:layout_constraintTop_toBottomOf="@id/user_input" />

    <TextView
        android:id="@+id/letter_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_letters"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/letter_counter"
        app:layout_constraintTop_toTopOf="@id/letter_counter" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/reset_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/letter_counter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/letter_counter" />

    <TextView
        android:id="@+id/letter_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="100sp"
        app:layout_constraintBottom_toTopOf="@id/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/letter_counter" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button_start"
        android:text="@string/start_button"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/stop_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button_stop"
        android:text="@string/stop_button"
        android:textAllCaps="false"
        android:visibility="invisible"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>